--- a/Software/ZavrsniApp/app/src/main/res/values/strings.xml
+++ b/Software/ZavrsniApp/app/src/main/res/values/strings.xml
@@ -16,7 +16,10 @@
     <string name="home_team_logo">Home Team Logo</string>
     <string name="teams">Teams:</string>
     <string name="scores">Scores:</string>
-    <string name="time_remaining">Time Remaining:</string>
+    <string name="time_remaining">Time remaining:</string>
     <string name="season">Season:</string>
     <string name="status">Status:</string>
+    <string name="last_play">Last play:</string>
+    <string name="sports_title">Sports</string>
+    <string name="quarter">Quarter:</string>
 </resources>
