Dodano nekoliko metoda jednokratnog događaja
Metode: BROKEN, NULL, EVENT HANDLER (mogu se odabrati iz pop-up izbornika)

--- a/Software/ZavrsniApp/app/src/main/res/values/strings.xml
+++ b/Software/ZavrsniApp/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="last_play">Last play:</string>
     <string name="sports_title">Sports</string>
     <string name="quarter">Quarter:</string>
+    <string name="method">Select Toast method</string>
 </resources>
